--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,7 +12,7 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
+- {icon: 'twitter', link: 'https://twitter.com/djfractal'}
 - {icon: 'rss-square', link: 'feed.xml'}
 
 # Customize site text
