--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,9 +8,8 @@ google-ID: ''
 
 menu:
 - {name: 'About', folder: 'pages', file: 'about.html'}
-- {name: 'Contact', folder: 'pages', file: 'contact.html'}
+- {name: 'Contribute', folder: 'pages', file: 'contribute.html'}
 
-# Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
 - {icon: 'twitter', link: 'https://twitter.com/djfractal'}
 - {icon: 'rss-square', link: 'feed.xml'}
