--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ sass:
   style: :nested
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           "Plant A Tree 🌱🌳"
+title:		           "Plant A Tree 🌱🌿🌳🌲"
 description:	       "a website about planting trees"
 author:              "Thor Kell"
 
