--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ google-ID: ''
 
 menu:
 - {name: 'About', folder: 'pages', file: 'about.html'}
-- {name: 'Contribute', folder: 'pages', file: 'contribute.html'}
+- {name: 'Add Trees', folder: 'pages', file: 'contribute.html'}
 
 social:
 - {icon: 'twitter', link: 'https://twitter.com/djfractal'}
@@ -16,8 +16,8 @@ social:
 
 # Customize site text
 pagination:
-  next_page: 'Newer'
-  previous_page: 'Older'
+  next_page: 'next'
+  previous_page: 'previous'
 
 sharing_button_prompt: 'Feel free to share!'
 
