Add resources to bc, add how to plant trees, copy edits

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ google-ID: ''
 
 menu:
 - {name: 'About', folder: 'pages', file: 'about.html'}
-- {name: 'Add Trees', folder: 'pages', file: 'contribute.html'}
+- {name: 'Plant More Trees', folder: 'pages', file: 'contribute.html'}
 
 social:
 - {icon: 'twitter', link: 'https://twitter.com/djfractal'}
